k8s/prod/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  namespace: prod
spec:
  selector:
    app: dynamodb
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
